# todo_template

./: README.md  pyproject.toml  run
.github/workflows/: create_todo._yml
2020/10/: 2020.10.19_weekly_todo.md  2020.10.26_weekly_todo.md
2020/11/: 2020.11.02_weekly_todo.md  2020.11.09_weekly_todo.md  2020.11.16_weekly_todo.md  2020.11.23_weekly_todo.md  2020.11.30_weekly_todo.md
2020/12/: 2020.12.07_weekly_todo.md  2020.12.14_weekly_todo.md
2021/01/: 2021.01.04_weekly_todo.md  2021.01.11_weekly_todo.md  2021.01.18_weekly_todo.md  2021.01.25_weekly_todo.md
2021/02/: 2021.02.01_weekly_todo.md  2021.02.08_weekly_todo.md  2021.02.15_weekly_todo.md  2021.02.22_weekly_todo.md
2021/03/: 2021.03.01_weekly_todo.md  2021.03.08_weekly_todo.md  2021.03.15_weekly_todo.md  2021.03.22_weekly_todo.md
2021/04/: 2021.04.05_weekly_todo.md
todo_template/: cli.py  render_template.py
todo_template/templates/: todo_template.md
