[tool.poetry]
name = "todo_template"
version = "0.1.0"
description = ""
authors = ["James Haughey <jimmyhaugh@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
todo = "todo_template.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
